<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textpl2"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="107dp"
        android:text="player2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textpl1"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="player1"
        app:layout_constraintStart_toStartOf="@+id/textpl2"
        app:layout_constraintTop_toBottomOf="@+id/textpl2" />

    <Button
        android:id="@+id/buttonRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:text="@string/restart"
        app:layout_constraintBottom_toBottomOf="@+id/textpl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textpl2" />

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:alignmentMode="alignMargins"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/button_00"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/button1"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_01"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/button2"
            android:textSize="60sp"
            app:layout_constraintLeft_toLeftOf="@id/button_00"
            app:layout_constraintRight_toRightOf="@id/button_02" />

        <Button
            android:id="@+id/button_02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/button3"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="1"
            android:layout_column="0"
            android:clickable="true"
            android:contentDescription="@string/button4"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="@id/button_00" />

        <Button
            android:id="@+id/button_11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/button5"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="@id/button_01"
            app:layout_constraintLeft_toLeftOf="@id/button_10" />

        <Button
            android:id="@+id/button_12"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="1"
            android:layout_column="2"
            android:clickable="true"
            android:contentDescription="@string/button6"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="@id/button_02"
            app:layout_constraintLeft_toLeftOf="@id/button_11" />

        <Button
            android:id="@+id/button_20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="3"
            android:layout_column="0"
            android:clickable="true"
            android:contentDescription="@string/button7"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_10" />


        <Button
            android:id="@+id/button_21"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_row="3"
            android:layout_column="1"
            android:clickable="true"
            android:contentDescription="@string/button8"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_11"
            app:layout_constraintLeft_toLeftOf="@+id/button_20" />

        <Button
            android:id="@+id/button_22"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/button9"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="@+id/button_12"
            app:layout_constraintLeft_toLeftOf="@+id/button_21" />


    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>